[web] Reduce whitespace between questions in reference eval modal. Fix bug where help text does not show.

--- a/src/webui/src/sass/_box-content.scss
+++ b/src/webui/src/sass/_box-content.scss
@@ -166,7 +166,3 @@ div.existing-classification-comments .tabular-row:last-child .wysiwygeditor {
 upload > label > div {
   display: flex;
 }
-
-.reference-eval-popover {
-  max-width: 30vw;
-}
